# NN-in-C-

./: .gitignore  CMakeLists.txt  LICENSE  main  neuron.h
config/: test.json  test.json.dist  train.json  train.json.dist
data/: test.csv
headers/: Layer.h  Matrix.h  NetworkDemo.h  NetworkTester.h  NetworkTrainer.h  NeuralNetwork.h  Neuron.h  matrixMultiplication.h
headers/utils/: DataLoader.h  MatrixToVector.h  MultiplyMatrix.h
src/: Layer.cpp  Matrix.cpp  NetworkDemo.cpp  NetworkTester.cpp  NetworkTrainer.cpp  NeuralNetwork.cpp  Neuron.cpp  example_usage.cpp  main.cpp  test_data.csv
src/NeuralNetwork/: BackPropagation.cpp  ErrorFunctions.cpp  FeedForward.cpp  IOHelpers.cpp  constructor.cpp  destructor.cpp  mutators.cpp  train.cpp  weightsIO.cpp
src/utils/: DataLoader.cpp  MatrixToVector.cpp  MultiplyMatrix.cpp
weights/: autoencoder_weights.csv
